fix(i18n): add missing translations [CDS 2048]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_de_DE.json
+++ b/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_de_DE.json
@@ -3,8 +3,8 @@
   "sidebar_menu": "Menü",
   "sidebar_menu_order_actions": "Bestellen",
   "sidebar_menu_search": "Suchen",
-  "sidebar_menu_search_no_results": "Kein Ergebnis gefunden.",
-  "sidebar_menu_search_loading": "Suchen...",
+  "sidebar_menu_search_no_results": "Es wurde kein Ergebnis gefunden.",
+  "sidebar_menu_search_loading": "Die Suche läuft...",
   "sidebar_menu_error_retry": "Erneut versuchen",
   "server_sidebar_item_title_DEDICATED": "Server",
   "server_sidebar_item_title_CLOUD": "Server",
@@ -42,7 +42,7 @@
   "server_sidebar_item_domain_all_title": "Meine gesamten Domainnamen",
   "server_sidebar_item_domain_bulk_title": "Massenaktionen",
   "server_sidebar_item_servers_all_title": "Alle meine Server",
-  "server_sidebar_item_domain_operations_title": "Laufende Operationen",
+  "server_sidebar_item_domain_operations_title": "Laufende Vorgänge",
   "server_sidebar_order_item_vps_title": "Virtual Private Server",
   "server_sidebar_item_web_paas_title": "Web PaaS",
   "server_sidebar_item_web_paas_all_accounts_title": "Alle Projekte",
@@ -64,7 +64,7 @@
   "server_sidebar_order_item_paas_veeam_enterprise_title": "Veeam Enterprise",
   "server_sidebar_order_item_clouddb_title": "CloudDB",
   "server_sidebar_order_item_clouddesktop_title": "Cloud Desktop",
-  "server_sidebar_order_item_kube_title": "Kubernetes",
+  "server_sidebar_order_item_kube_title": "Kubernetes ®",
   "server_sidebar_order_item_logs_title": "Logs Data Platform",
   "server_sidebar_order_item_domains_title": "Domainnamen",
   "server_sidebar_order_item_domain_title": "Domainname",
@@ -91,7 +91,7 @@
   "server_sidebar_item_telephony_title": "Telefonie",
   "server_sidebar_item_telephony_repayments_title": "Meine Auszahlungen verwalten",
   "server_sidebar_item_telephony_prefix_carrier_sip": "SIP-Anbieter",
-  "server_sidebar_item_telephony_prefix_number": "Nummer",
+  "server_sidebar_item_telephony_prefix_number": "Nr.",
   "server_sidebar_item_telephony_prefix_line": "SIP",
   "server_sidebar_item_telephony_prefix_fax": "Fax",
   "server_sidebar_item_telephony_prefix_plug_fax": "P&amp;F",
@@ -100,7 +100,7 @@
   "server_sidebar_item_fax_title": "Fax",
   "server_sidebar_item_fax_prefix": "Basic",
   "server_sidebar_item_overthebox_title": "OverTheBox",
-  "server_sidebar_item_tasks_title": "Operationen",
+  "server_sidebar_item_tasks_title": "Vorgänge",
   "server_sidebar_order_item_fax_title": "Fax",
   "server_sidebar_order_item_sms_title": "SMS",
   "server_sidebar_order_item_sms_hlr_title": "HLR",
