--- a/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_en_GB.json
+++ b/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_en_GB.json
@@ -12,7 +12,7 @@
   "server_sidebar_item_empty_title": "No services",
   "server_sidebar_item_dedicatedServers_title": "Dedicated servers",
   "server_sidebar_item_managedBaremetal_title": "Managed Bare Metal",
-  "server_sidebar_item_dedicatedClouds_title": "Hosted Private Cloud",
+  "server_sidebar_item_dedicatedClouds_title": "VMware",
   "server_sidebar_item_anthos_title": "Anthos",
   "server_sidebar_item_anthos_all_title": "All my deployments",
   "server_sidebar_item_networks_title": "NAS and CDN",
@@ -51,7 +51,7 @@
   "server_sidebar_order_item_dedicated_server_title": "Dedicated Server",
   "server_sidebar_order_item_dedicated_server_eco_title": "Eco Dedicated Servers",
   "server_sidebar_order_item_cloud_project_title": "Cloud Project ",
-  "server_sidebar_order_item_dedicated_cloud_title": "Hosted Private Cloud",
+  "server_sidebar_order_item_dedicated_cloud_title": "VMware",
   "server_sidebar_order_item_managed_bare_metal_title": "Managed Bare Metal",
   "server_sidebar_order_item_ip_title": "Additional IP ",
   "server_sidebar_order_item_iplb_title": "Load Balancer",
@@ -89,7 +89,7 @@
   "server_sidebar_item_pack_title": "Internet access ",
   "server_sidebar_item_pack_prefix": "Pack",
   "server_sidebar_item_telephony_title": "Telephony",
-  "server_sidebar_item_telephony_repayments_title": "Manage my repayments",
+  "server_sidebar_item_telephony_repayments_title": "Manage repayments",
   "server_sidebar_item_telephony_prefix_carrier_sip": "SIP provider",
   "server_sidebar_item_telephony_prefix_number": "No.",
   "server_sidebar_item_telephony_prefix_line": "SIP",
