--- a/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_es_ES.json
+++ b/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_es_ES.json
@@ -6,8 +6,8 @@
   "sidebar_menu_search_no_results": "No se han encontrado resultados.",
   "sidebar_menu_search_loading": "Buscando...",
   "sidebar_menu_error_retry": "Volver a intentarlo",
-  "server_sidebar_item_title_DEDICATED": "Servidor",
-  "server_sidebar_item_title_CLOUD": "Servidor",
+  "server_sidebar_item_title_DEDICATED": "Servidores",
+  "server_sidebar_item_title_CLOUD": "Servidores",
   "server_sidebar_item_title_WEB": "Web",
   "server_sidebar_item_empty_title": "No hay servicios",
   "server_sidebar_item_dedicatedServers_title": "Servidores dedicados",
@@ -46,7 +46,7 @@
   "server_sidebar_order_item_vps_title": "Servidores privados virtuales",
   "server_sidebar_item_web_paas_title": "Web PaaS",
   "server_sidebar_item_web_paas_all_accounts_title": "Todos los proyectos",
-  "server_sidebar_item_storage_backup_title": "Almacenamiento y backup",
+  "server_sidebar_item_storage_backup_title": "Storage y backup",
   "server_sidebar_item_enterprise_file_storage_title": "Enterprise File Storage",
   "server_sidebar_order_item_dedicated_server_title": "Servidor dedicado",
   "server_sidebar_order_item_dedicated_server_eco_title": "Servidores dedicados Eco",
@@ -64,7 +64,7 @@
   "server_sidebar_order_item_paas_veeam_enterprise_title": "Veeam Enterprise",
   "server_sidebar_order_item_clouddb_title": "CloudDB",
   "server_sidebar_order_item_clouddesktop_title": "Cloud Desktop",
-  "server_sidebar_order_item_kube_title": "Kubernetes ®",
+  "server_sidebar_order_item_kube_title": "Kubernetes<sup>®</sup>",
   "server_sidebar_order_item_logs_title": "Logs Data Platform",
   "server_sidebar_order_item_domains_title": "Dominios",
   "server_sidebar_order_item_domain_title": "Dominio",
@@ -77,7 +77,7 @@
   "server_sidebar_order_item_csp2_title": "Office Reseller",
   "server_sidebar_order_item_office_title": "O365",
   "server_sidebar_order_item_sharepoint_title": "SharePoint",
-  "server_sidebar_order_item_zone_title": "Zone DNS",
+  "server_sidebar_order_item_zone_title": "Zona DNS",
   "server_sidebar_order_item_enterprise_cloud_database_title": "Enterprise Cloud Databases",
   "server_sidebar_order_item_cloudDatabase_title": "CloudDB",
   "server_sidebar_order_item_ovh_cloud_connect_title": "OVHcloud Connect",
@@ -89,7 +89,7 @@
   "server_sidebar_item_pack_title": "Acceso a internet",
   "server_sidebar_item_pack_prefix": "Pack",
   "server_sidebar_item_telephony_title": "Telefonía",
-  "server_sidebar_item_telephony_repayments_title": "Gestionar mis ingresos",
+  "server_sidebar_item_telephony_repayments_title": "Gestionar mis reembolsos",
   "server_sidebar_item_telephony_prefix_carrier_sip": "Proveedor SIP",
   "server_sidebar_item_telephony_prefix_number": "N.º",
   "server_sidebar_item_telephony_prefix_line": "SIP",
