--- a/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_it_IT.json
+++ b/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_it_IT.json
@@ -1,9 +1,9 @@
 {
-  "sidebar_order_menu_back": "Ritorna",
+  "sidebar_order_menu_back": "Indietro",
   "sidebar_menu": "Menu",
   "sidebar_menu_order_actions": "Ordina",
   "sidebar_menu_search": "Ricerca",
-  "sidebar_menu_search_no_results": "Nessun risultato trovato",
+  "sidebar_menu_search_no_results": "Nessun risultato trovato.",
   "sidebar_menu_search_loading": "Ricerca in corso...",
   "sidebar_menu_error_retry": "Riprova",
   "server_sidebar_item_title_DEDICATED": "Server",
@@ -38,7 +38,7 @@
   "server_sidebar_item_emailPros_title": "Email Pro",
   "server_sidebar_item_emails_title": "Email",
   "server_sidebar_item_office_title": "Office",
-  "server_sidebar_item_sharepoint_title": "Sharepoint",
+  "server_sidebar_item_sharepoint_title": "SharePoint",
   "server_sidebar_item_domain_all_title": "Tutti i tuoi domini",
   "server_sidebar_item_domain_bulk_title": "Azioni massive",
   "server_sidebar_item_servers_all_title": "Tutti i tuoi server",
@@ -48,12 +48,12 @@
   "server_sidebar_item_web_paas_all_accounts_title": "Tutti i progetti",
   "server_sidebar_item_storage_backup_title": "Storage e backup",
   "server_sidebar_item_enterprise_file_storage_title": "Enterprise File Storage",
-  "server_sidebar_order_item_dedicated_server_title": "Server dedicato",
+  "server_sidebar_order_item_dedicated_server_title": "Server dedicati",
   "server_sidebar_order_item_dedicated_server_eco_title": "Server dedicati Eco",
   "server_sidebar_order_item_cloud_project_title": "Progetto Cloud",
   "server_sidebar_order_item_dedicated_cloud_title": "VMware",
   "server_sidebar_order_item_managed_bare_metal_title": "Managed Bare Metal",
-  "server_sidebar_order_item_ip_title": "IP aggiuntivi",
+  "server_sidebar_order_item_ip_title": "IP aggiuntivo",
   "server_sidebar_order_item_iplb_title": "Load Balancer",
   "server_sidebar_order_item_vrack_title": "vRack",
   "server_sidebar_order_item_licence_title": "Licenza",
@@ -62,7 +62,7 @@
   "server_sidebar_order_item_paas_cda_title": "Cloud Disk Array",
   "server_sidebar_order_item_paas_veeam_title": "Veeam Cloud Connect",
   "server_sidebar_order_item_paas_veeam_enterprise_title": "Veeam Enterprise",
-  "server_sidebar_order_item_clouddb_title": "Cloud DB",
+  "server_sidebar_order_item_clouddb_title": "CloudDB",
   "server_sidebar_order_item_clouddesktop_title": "Cloud Desktop",
   "server_sidebar_order_item_kube_title": "Kubernetes®",
   "server_sidebar_order_item_logs_title": "Logs Data Platform",
@@ -76,7 +76,7 @@
   "server_sidebar_order_item_exchange_title": "Exchange",
   "server_sidebar_order_item_csp2_title": "Office Reseller",
   "server_sidebar_order_item_office_title": "O365",
-  "server_sidebar_order_item_sharepoint_title": "Sharepoint",
+  "server_sidebar_order_item_sharepoint_title": "SharePoint",
   "server_sidebar_order_item_zone_title": "Zona DNS",
   "server_sidebar_order_item_enterprise_cloud_database_title": "Enterprise Cloud Databases",
   "server_sidebar_order_item_cloudDatabase_title": "CloudDB",
