--- a/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_pl_PL.json
+++ b/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_pl_PL.json
@@ -3,21 +3,21 @@
   "sidebar_menu": "Menu",
   "sidebar_menu_order_actions": "Zamów",
   "sidebar_menu_search": "Szukaj",
-  "sidebar_menu_search_no_results": "Brak wyników",
+  "sidebar_menu_search_no_results": "Brak wyników wyszukiwania.",
   "sidebar_menu_search_loading": "Trwa wyszukiwanie...",
   "sidebar_menu_error_retry": "Spróbuj ponownie",
   "server_sidebar_item_title_DEDICATED": "Serwer",
   "server_sidebar_item_title_CLOUD": "Serwer",
   "server_sidebar_item_title_WEB": "Web",
   "server_sidebar_item_empty_title": "Brak usług",
-  "server_sidebar_item_dedicatedServers_title": "Serwery Dedykowane",
+  "server_sidebar_item_dedicatedServers_title": "Serwery dedykowane",
   "server_sidebar_item_managedBaremetal_title": "Managed Bare Metal",
   "server_sidebar_item_dedicatedClouds_title": "VMware",
   "server_sidebar_item_anthos_title": "Anthos",
   "server_sidebar_item_anthos_all_title": "Wszystkie moje wdrożenia",
   "server_sidebar_item_networks_title": "NAS i CDN",
   "server_sidebar_item_licences_title": "Licencje",
-  "server_sidebar_item_ip_title": "IP",
+  "server_sidebar_item_ip_title": "Adres IP",
   "server_sidebar_item_microsoft_title": "Microsoft",
   "server_sidebar_item_microsoft_exchange_title": "Microsoft Exchange",
   "server_sidebar_item_exchange_title": "Exchange",
@@ -30,7 +30,7 @@
   "server_sidebar_item_load_balancer_title": "Load Balancer",
   "server_sidebar_item_dedicated_network_title": "Sieć",
   "server_sidebar_item_vrack_title": "vRack",
-  "server_sidebar_item_cloud_connect_title": "OVHCloud Connect",
+  "server_sidebar_item_cloud_connect_title": "OVHcloud Connect",
   "server_sidebar_item_cloud_desktop_title": "Cloud Desktop",
   "server_sidebar_item_domains_title": "Domeny",
   "server_sidebar_item_hostings_title": "Hosting",
@@ -53,7 +53,7 @@
   "server_sidebar_order_item_cloud_project_title": "Projekt Cloud",
   "server_sidebar_order_item_dedicated_cloud_title": "VMware",
   "server_sidebar_order_item_managed_bare_metal_title": "Managed Bare Metal",
-  "server_sidebar_order_item_ip_title": "Dodatkowe IP",
+  "server_sidebar_order_item_ip_title": "Dodatkowy adres IP",
   "server_sidebar_order_item_iplb_title": "Load Balancer",
   "server_sidebar_order_item_vrack_title": "vRack",
   "server_sidebar_order_item_licence_title": "Licencja",
@@ -62,25 +62,25 @@
   "server_sidebar_order_item_paas_cda_title": "Cloud Disk Array",
   "server_sidebar_order_item_paas_veeam_title": "Veeam CC",
   "server_sidebar_order_item_paas_veeam_enterprise_title": "Veeam Enterprise",
-  "server_sidebar_order_item_clouddb_title": "Cloud Database",
+  "server_sidebar_order_item_clouddb_title": "CloudDB",
   "server_sidebar_order_item_clouddesktop_title": "Cloud Desktop",
   "server_sidebar_order_item_kube_title": "Kubernetes®",
   "server_sidebar_order_item_logs_title": "Logs Data Platform",
   "server_sidebar_order_item_domains_title": "Domeny",
   "server_sidebar_order_item_domain_title": "Domena",
-  "server_sidebar_order_item_privateDatabase_title": "SQL Prywatny",
+  "server_sidebar_order_item_privateDatabase_title": "Private SQL",
   "server_sidebar_order_item_hosting_title": "Hosting",
-  "server_sidebar_order_item_cloudWeb_title": "Cloud Web 1",
+  "server_sidebar_order_item_cloudWeb_title": "Cloud Web",
   "server_sidebar_order_item_emailPro_title": "E-mail Pro",
   "server_sidebar_order_item_mxplan_title": "MX Plan",
   "server_sidebar_order_item_exchange_title": "Exchange",
-  "server_sidebar_order_item_csp2_title": "Office Reseller",
+  "server_sidebar_order_item_csp2_title": "Office dla resellerów",
   "server_sidebar_order_item_office_title": "O365",
   "server_sidebar_order_item_sharepoint_title": "Sharepoint",
-  "server_sidebar_order_item_zone_title": "Zone DNS",
+  "server_sidebar_order_item_zone_title": "Strefa DNS",
   "server_sidebar_order_item_enterprise_cloud_database_title": "Enterprise Cloud Databases",
   "server_sidebar_order_item_cloudDatabase_title": "CloudDB",
-  "server_sidebar_order_item_ovh_cloud_connect_title": "OVHCloud Connect",
+  "server_sidebar_order_item_ovh_cloud_connect_title": "OVHcloud Connect",
   "server_sidebar_order_item_web_paas_title": "Web PaaS",
   "server_sidebar_item_nutanix_title": "Nutanix",
   "server_sidebar_item_nutanix_clusters_all_title": "Wszystkie moje klastry",
