--- a/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_pt_PT.json
@@ -1,10 +1,10 @@
 {
-  "sidebar_order_menu_back": "Voltar atrás",
+  "sidebar_order_menu_back": "Retroceder",
   "sidebar_menu": "Menu",
   "sidebar_menu_order_actions": "Encomendar",
-  "sidebar_menu_search": "Pesquisar",
-  "sidebar_menu_search_no_results": "Não foram encontrados resultados para os termos pesquisados",
-  "sidebar_menu_search_loading": "Procura em curso...",
+  "sidebar_menu_search": "Procurar",
+  "sidebar_menu_search_no_results": "Não foram encontrados resultados.",
+  "sidebar_menu_search_loading": "Pesquisa em curso...",
   "sidebar_menu_error_retry": "Tentar novamente",
   "server_sidebar_item_title_DEDICATED": "Server",
   "server_sidebar_item_title_CLOUD": "Server",
@@ -66,7 +66,7 @@
   "server_sidebar_order_item_clouddesktop_title": "Cloud Desktop",
   "server_sidebar_order_item_kube_title": "Kubernetes®",
   "server_sidebar_order_item_logs_title": "Logs Data Platform",
-  "server_sidebar_order_item_domains_title": "Domínios",
+  "server_sidebar_order_item_domains_title": "Nomes de domínio",
   "server_sidebar_order_item_domain_title": "Domínio",
   "server_sidebar_order_item_privateDatabase_title": "SQL Privado",
   "server_sidebar_order_item_hosting_title": "Alojamentos",
