--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
@@ -8,7 +8,7 @@
   "sidebar_dedicated": "Dedicated Server",
   "sidebar_dedicated_housing": "Housing",
   "sidebar_telecom": "Telekommunikation",
-  "sidebar_telecom_operations": "Operationen",
+  "sidebar_telecom_operations": "Vorgänge",
   "sidebar_telecom_v4": "Manager v4",
   "sidebar_vps": "Virtual Private Server",
   "sidebar_storage_backup": "Storage und Backup",
@@ -28,9 +28,9 @@
   "sidebar_pci_bare_metal": "Bare Metal",
   "sidebar_pci_storage": "Storage and Backup",
   "sidebar_pci_network": "Network",
-  "sidebar_pci_containers": "Container & Orchestrierung",
-  "sidebar_pci_ai": "AI & Machine Learning",
-  "sidebar_pci_analytics": "Data & Analytics",
+  "sidebar_pci_containers": "Container &amp; Orchestrierung",
+  "sidebar_pci_ai": "KI &amp; Machine Learning",
+  "sidebar_pci_analytics": "Data &amp; Analytics",
   "sidebar_pci_management": "Verwaltungsinterfaces",
   "sidebar_pci_settings": "Settings",
   "sidebar_pci_object_storage": "Object Storage",
@@ -57,7 +57,7 @@
   "sidebar_pci_quota_regions": "Quota and Regions",
   "sidebar_pci_ssh_keys": "SSH-Schlüssel",
   "sidebar_pci_billing": "Abrechnung",
-  "sidebar_pci_credits_vouchers": "Guthaben und Gutscheine",
+  "sidebar_pci_credits_vouchers": "Guthaben &amp; Gutscheine",
   "sidebar_pci_contacts_rights": "Kontakt &amp; Rechte",
   "sidebar_pci_project_settings": "Project Settings",
   "sidebar_storage": "Speicherdienste",
@@ -77,7 +77,7 @@
   "sidebar_iplb": "Loadbalancer",
   "sidebar_ip": "Öffentliche IP-Adressen",
   "sidebar_cdn": "CDN Infrastruktur",
-  "sidebar_domain_dns": "Domains & DNS",
+  "sidebar_domain_dns": "Domains &amp; DNS",
   "sidebar_domain": "Domainnamen",
   "sidebar_dns": "DNS-Zone",
   "sidebar_web_hosting": "Web",
@@ -130,5 +130,24 @@
   "sidebar_tag_new": "Neu",
   "sidebar_domain_operations": "Laufende Vorgänge",
   "sidebar_pci_additional_ips": "Öffentliche IPs",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_loading": "Ladevorgang läuft",
+  "sidebar_no_result": "Es wurde kein Ergebnis gefunden.",
+  "sidebar_back_home": "Zurück zur Startseite",
+  "sidebar_search": "Suchen",
+  "sidebar_show_all": "Alles anzeigen",
+  "sidebar_account_all": "Alle Accounts",
+  "sidebar_service_all": "Alle Dienste",
+  "sidebar_project_all": "Alle Projekte",
+  "sidebar_ip_short": "IP",
+  "sidebar_dedicated_all": "Alle meine Server",
+  "sidebar_anthos_all": "Meine Deployments",
+  "sidebar_platforms_services": "Plattformen und Dienstleistungen",
+  "sidebar_nas_cdn": "NAS und CDN",
+  "sidebar_domain_batch": "Massenaktionen",
+  "sidebar_telephony_repayments": "Meine Auszahlungen verwalten",
+  "sidebar_telephony_type_alias": "Nr.",
+  "sidebar_telephony_type_sipTrunk": "Trunk",
+  "sidebar_telephony_type_sip": "SIP",
+  "sidebar_telephony_type_fax": "Fax"
 }
