--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
@@ -43,7 +43,7 @@
   "sidebar_pci_private_network": "Private Network",
   "sidebar_pci_failover_ip": "IP Failover",
   "sidebar_pci_kubernetes": "Managed Kubernetes",
-  "sidebar_pci_kubernetes_load_balancer": "Load balancer con Kubernetes",
+  "sidebar_pci_kubernetes_load_balancer": "Kubernetes Load Balancer",
   "sidebar_pci_private_registry": "Managed Private Registry",
   "sidebar_pci_workflow": "Workflow Management",
   "sidebar_pci_ai_notebooks": "AI Notebooks",
@@ -130,5 +130,24 @@
   "sidebar_tag_new": "Novedad",
   "sidebar_domain_operations": "Operaciones en curso",
   "sidebar_pci_additional_ips": "IP públicas",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_loading": "Cargando...",
+  "sidebar_no_result": "No se han encontrado resultados.",
+  "sidebar_back_home": "Volver a la página de inicio",
+  "sidebar_search": "Buscar",
+  "sidebar_show_all": "Ver todo",
+  "sidebar_account_all": "Todas las cuentas",
+  "sidebar_service_all": "Todos los servicios",
+  "sidebar_project_all": "Todos los proyectos",
+  "sidebar_ip_short": "IP",
+  "sidebar_dedicated_all": "Todos mis servidores",
+  "sidebar_anthos_all": "Todos mis despliegues",
+  "sidebar_platforms_services": "Plataformas y servicios",
+  "sidebar_nas_cdn": "NAS y CDN",
+  "sidebar_domain_batch": "Acciones masivas",
+  "sidebar_telephony_repayments": "Gestionar mis reembolsos",
+  "sidebar_telephony_type_alias": "N.º",
+  "sidebar_telephony_type_sipTrunk": "Trunk",
+  "sidebar_telephony_type_sip": "SIP",
+  "sidebar_telephony_type_fax": "Fax"
 }
