--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
@@ -10,7 +10,7 @@
   "sidebar_telecom": "Telecom",
   "sidebar_telecom_operations": "Operazioni",
   "sidebar_telecom_v4": "Manager v4",
-  "sidebar_vps": "Server privati virtuali",
+  "sidebar_vps": "Server Privati Virtuali",
   "sidebar_storage_backup": "Storage e backup",
   "sidebar_dedicated_cloud": "Managed Bare Metal",
   "sidebar_licences": "Licenze",
@@ -130,5 +130,24 @@
   "sidebar_tag_new": "Nuovo",
   "sidebar_domain_operations": "Operazioni in corso",
   "sidebar_pci_additional_ips": "IP pubblici",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_loading": "Caricamento in corso...",
+  "sidebar_no_result": "Nessun risultato trovato.",
+  "sidebar_back_home": "Torna alla home page",
+  "sidebar_search": "Ricerca",
+  "sidebar_show_all": "Visualizza tutto",
+  "sidebar_account_all": "Tutti gli account",
+  "sidebar_service_all": "Tutti i servizi",
+  "sidebar_project_all": "Tutti i progetti",
+  "sidebar_ip_short": "IP",
+  "sidebar_dedicated_all": "Tutti i tuoi server",
+  "sidebar_anthos_all": "Tutte le tue installazioni",
+  "sidebar_platforms_services": "Piattaforme e servizi",
+  "sidebar_nas_cdn": "NAS e CDN",
+  "sidebar_domain_batch": "Azioni massive",
+  "sidebar_telephony_repayments": "Gestisci i tuoi rimborsi",
+  "sidebar_telephony_type_alias": "N°",
+  "sidebar_telephony_type_sipTrunk": "Trunk",
+  "sidebar_telephony_type_sip": "SIP",
+  "sidebar_telephony_type_fax": "Fax"
 }
