--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
@@ -29,8 +29,8 @@
   "sidebar_pci_storage": "Storage and backup",
   "sidebar_pci_network": "Sieć",
   "sidebar_pci_containers": "Konteneryzacja i Orkiestracja",
-  "sidebar_pci_ai": "AI & Machine Learning",
-  "sidebar_pci_analytics": "Data & Analytics",
+  "sidebar_pci_ai": "AI &amp; Machine Learning",
+  "sidebar_pci_analytics": "Data &amp; Analytics",
   "sidebar_pci_management": "Interfejsy zarządzania",
   "sidebar_pci_settings": "Settings",
   "sidebar_pci_object_storage": "Object Storage",
@@ -53,7 +53,7 @@
   "sidebar_pci_data_processing": "Data processing",
   "sidebar_pci_logs_data_platform": "Logs Data Platform",
   "sidebar_pci_horizon": "Horizon",
-  "sidebar_pci_users_roles": "Użytkownicy & Role",
+  "sidebar_pci_users_roles": "Użytkownicy &amp; Role",
   "sidebar_pci_quota_regions": "Quota and Regions",
   "sidebar_pci_ssh_keys": "Klucze SSH",
   "sidebar_pci_billing": "Płatności",
@@ -130,5 +130,24 @@
   "sidebar_tag_new": "Nowość",
   "sidebar_domain_operations": "Operacje w toku",
   "sidebar_pci_additional_ips": "Publiczne adresy IP",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_loading": "Trwa pobieranie...",
+  "sidebar_no_result": "Brak wyników wyszukiwania.",
+  "sidebar_back_home": "Powrót do strony głównej",
+  "sidebar_search": "Szukaj",
+  "sidebar_show_all": "Wyświetl wszystkie",
+  "sidebar_account_all": "Wszystkie konta",
+  "sidebar_service_all": "Wszystkie usługi",
+  "sidebar_project_all": "Wszystkie projekty",
+  "sidebar_ip_short": "Adres IP",
+  "sidebar_dedicated_all": "Wszystkie moje serwery",
+  "sidebar_anthos_all": "Wszystkie moje wdrożenia",
+  "sidebar_platforms_services": "Platformy i usługi",
+  "sidebar_nas_cdn": "NAS i CDN",
+  "sidebar_domain_batch": "Masowe operacje",
+  "sidebar_telephony_repayments": "Zarządzanie zwrotami",
+  "sidebar_telephony_type_alias": "Nr",
+  "sidebar_telephony_type_sipTrunk": "Trunk",
+  "sidebar_telephony_type_sip": "SIP",
+  "sidebar_telephony_type_fax": "Faks"
 }
