--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_CA.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_CA.json
@@ -1,11 +1,21 @@
 {
   "sidebar_home": "Tableau de bord",
+  "sidebar_loading": "Chargement en cours",
+  "sidebar_no_result": "Aucun résultat trouvé.",
   "sidebar_back": "Retour",
+  "sidebar_back_home": "Retour à la page d'accueil",
+  "sidebar_search": "Rechercher",
+  "sidebar_show_all": "Voir tout",
+  "sidebar_account_all": "Tous les comptes",
+  "sidebar_service_all": "Tous les services",
+  "sidebar_project_all": "Tous les projets",
   "sidebar_service_add": "Ajouter un service",
   "sidebar_bare_metal_cloud": "Bare Metal Cloud",
+  "sidebar_ip_short": "IP",
   "sidebar_web_cloud": "Web Cloud",
   "sidebar_dedicated_vps": "Serveurs dédiés et virtuels",
   "sidebar_dedicated": "Serveurs dédiés",
+  "sidebar_dedicated_all": "Tous mes serveurs",
   "sidebar_dedicated_housing": "Housing",
   "sidebar_telecom": "Télécom",
   "sidebar_telecom_operations": "Opérations",
@@ -17,9 +27,11 @@
   "sidebar_hpc": "Hosted Private Cloud",
   "sidebar_vmware": "VMware",
   "sidebar_anthos": "Anthos",
+  "sidebar_anthos_all": "Tous mes déploiements",
   "sidebar_nutanix": "Nutanix",
   "sidebar_cluster_all": "Tous mes clusters",
   "sidebar_platforms": "Plateformes",
+  "sidebar_platforms_services": "Plateformes et services",
   "sidebar_veeam_enterprise": "Veeam Enterprise",
   "sidebar_pci": "Public Cloud",
   "sidebar_pci_new": "Créer un projet",
@@ -67,6 +79,7 @@
   "sidebar_storage": "Services de stockage",
   "sidebar_nasha": "NAS-HA",
   "sidebar_nas": "NAS",
+  "sidebar_nas_cdn": "NAS et CDN",
   "sidebar_netapp": "Enterprise File Storage",
   "sidebar_cda": "Cloud Disk Array",
   "sidebar_veeamcc": "Veeam Cloud Connect",
@@ -84,6 +97,7 @@
   "sidebar_domain_dns": "Domaines & DNS",
   "sidebar_domain_operations": "Opérations en cours",
   "sidebar_domain": "Noms de domaine",
+  "sidebar_domain_batch": "Actions de masse",
   "sidebar_dns": "Zones DNS",
   "sidebar_web_hosting": "Web",
   "sidebar_hosting": "Hébergements",
@@ -98,6 +112,7 @@
   "sidebar_mxplan": "MX Plan",
   "sidebar_email_delegated": "Délégations e-mails",
   "sidebar_microsoft": "Microsoft",
+  "sidebar_microsoft_exchange": "Microsoft Exchange",
   "sidebar_license_office": "Microsoft 365",
   "sidebar_sharepoint": "SharePoint",
   "sidebar_internet": "Accès Internet",
@@ -105,9 +120,14 @@
   "sidebar_internet_line": "Ligne internet seule",
   "sidebar_otb": "OverTheBox",
   "sidebar_telephony": "Téléphonie",
+  "sidebar_telephony_repayments": "Gérer mes reversements",
   "sidebar_telephony_voip_groups": "VoIP",
   "sidebar_telephony_sms": "SMS",
   "sidebar_telephony_fax": "Fax",
+  "sidebar_telephony_type_alias": "N°",
+  "sidebar_telephony_type_sipTrunk": "Trunk",
+  "sidebar_telephony_type_sip": "SIP",
+  "sidebar_telephony_type_fax": "Fax",
   "sidebar_account": "Mon compte",
   "sidebar_billing": "Mes factures",
   "sidebar_orders": "Mes commandes",
