--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
@@ -29,9 +29,9 @@
   "sidebar_pci_bare_metal": "Bare metal",
   "sidebar_pci_storage": "Armazenamento e backup",
   "sidebar_pci_network": "Network",
-  "sidebar_pci_containers": "Containers & Orchestration",
-  "sidebar_pci_ai": "AI & Machine Learning",
-  "sidebar_pci_analytics": "Data & Analytics",
+  "sidebar_pci_containers": "Containers &amp; orquestração",
+  "sidebar_pci_ai": "IA &amp; Machine Learning",
+  "sidebar_pci_analytics": "Data &amp; Analytics",
   "sidebar_pci_management": "Management Interfaces",
   "sidebar_pci_settings": "Definições",
   "sidebar_pci_object_storage": "Object Storage",
@@ -79,7 +79,7 @@
   "sidebar_ip": "Endereços IP públicos",
   "sidebar_cdn": "CDN Infrastructure",
   "sidebar_domain_dns": "Domínios e DNS",
-  "sidebar_domain": "Domínios",
+  "sidebar_domain": "Nomes de domínio",
   "sidebar_dns": "Zonas DNS",
   "sidebar_web_hosting": "Web",
   "sidebar_hosting": "Alojamentos",
@@ -130,5 +130,24 @@
   "sidebar_tag_new": "Novo",
   "sidebar_domain_operations": "Operações em curso",
   "sidebar_pci_additional_ips": "IP públicos",
-  "sidebar_pci_public_gateways": "Gateway"
+  "sidebar_pci_public_gateways": "Gateway",
+  "sidebar_loading": "Carregamento em curso",
+  "sidebar_no_result": "Não foram encontrados resultados.",
+  "sidebar_back_home": "Voltar para a página inicial",
+  "sidebar_search": "Procurar",
+  "sidebar_show_all": "Ver tudo",
+  "sidebar_account_all": "Todas as contas",
+  "sidebar_service_all": "Todos os serviços",
+  "sidebar_project_all": "Todos os projetos",
+  "sidebar_ip_short": "IP",
+  "sidebar_dedicated_all": "Todos os meus servidores",
+  "sidebar_anthos_all": "Todas as minhas implementações",
+  "sidebar_platforms_services": "Plataformas e serviços",
+  "sidebar_nas_cdn": "NAS e CDN",
+  "sidebar_domain_batch": "Ações massivas",
+  "sidebar_telephony_repayments": "Gerir as minhas transferências",
+  "sidebar_telephony_type_alias": "N.°",
+  "sidebar_telephony_type_sipTrunk": "Trunk",
+  "sidebar_telephony_type_sip": "SIP",
+  "sidebar_telephony_type_fax": "Fax"
 }
