fix(dedicated.account): change the header for the profile edit section
ref: MANAGER-10761

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_fr_FR.json
@@ -5,10 +5,10 @@
   "signup_email_in_use": "Un compte client OVH existe déjà pour cet e-mail.",
   "signup_password_invalid": "Doit contenir au moins un chiffre, au moins une majuscule, au moins une minuscule. Et être constitué de 8 caractères ou plus.",
   "signup_section_identification": "Votre identification client",
-  "signup_section_activity": "Activité",
+  "signup_section_activity": "Votre activité",
   "signup_section_personal": "Vos informations personnelles",
   "signup_section_contact": "Vos informations de contact",
-  "signup_section_language": "Informations de languages",
+  "signup_section_language": "Configuration de votre espace client",
   "signup_section_other": "Informations complémentaires",
   "signup_field_date_placeholder": "jj/mm/aaaa",
   "signup_field_date_calendar": "Choisir la date",
