feat(dedicated.ip): change trade names
ref: MANAGER-10580
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_fr_FR.json
@@ -136,7 +136,7 @@
   "ip_table_header_mitigation": "Mitigation",
   "ip_table_header_mitigation_help": "Statut de la protection anti-DDoS.",
   "ip_table_header_security": "Firewall",
-  "ip_table_header_security_help": "Statut du Edge Firewall Network",
+  "ip_table_header_security_help": "Statut du Edge Network Firewall",
   "ip_table_header_game_mitigation": "Firewall Game",
   "ip_table_header_game_mitigation_help": "Disponibilité de la protection anti-DDoS game pour le service.",
   "ip_table_header_organisation": "Organisation",
@@ -195,7 +195,7 @@
   "ip_failover_short": "FO",
   "ip_failover_impossible_delete": "Cette IP ne peut pas être supprimée",
   "ip_failover_impossible_move": "Cette IP ne peut pas être déplacée",
-  "ip_failover_cloud_move_info": "Vous pourrez prochainement déplacer les Additional IP Cloud vers d'autres produits OVH.",
+  "ip_failover_cloud_move_info": "Vous pourrez prochainement déplacer les Additional IP vers d'autres produits OVHcloud.",
   "ip_position": "Priorité",
   "ip_position_tooltip": "La lecture des règles est séquentielle. La règle 0 possède la priorité la plus haute.",
   "ip_rule": "Règle",
@@ -375,9 +375,9 @@
   "ip_firewall_PENDING": "En cours",
   "ip_firewall_DISABLE_PENDING": "Désactivation...",
   "ip_firewall_ENABLE_PENDING": "Activation...",
-  "ip_firewall_NOT_CONFIGURED_help": "Le trafic ne passe pas par le Edge Firewall Network, et celui-ci n'a jamais été configuré.",
-  "ip_firewall_DEACTIVATED_help": "Le trafic ne passe pas par le Edge Firewall Network.",
-  "ip_firewall_ACTIVATED_help": "Le trafic venant de l'extérieur du réseau OVHcloud passe par le Edge Firewall Network. Note : le Edge Firewall Network s’active automatiquement à chaque attaque DDoS et ne peut pas être désactivé avant la fin de l’attaque.",
+  "ip_firewall_NOT_CONFIGURED_help": "Le trafic ne passe pas par le Edge Network Firewall, et celui-ci n'a jamais été configuré.",
+  "ip_firewall_DEACTIVATED_help": "Le trafic ne passe pas par le Edge Network Firewall.",
+  "ip_firewall_ACTIVATED_help": "Le trafic venant de l'extérieur du réseau OVHcloud passe par le Edge Network Firewall. Note : le Edge Network Firewall s’active automatiquement à chaque attaque DDoS et ne peut pas être désactivé avant la fin de l’attaque.",
   "ip_firewall_PENDING_help": "Firewall en cours d'activation ou de désactivation.",
   "ip_firewall_DISABLE_PENDING_help": "Firewall en cours de désactivation.",
   "ip_firewall_ENABLE_PENDING_help": "Firewall en cours d'activation.",
@@ -600,7 +600,7 @@
   "iplb_infos_stickiness_cookie": "Cookie",
   "iplb_infos_stickiness_sourceIp": "IP source",
   "iplb_infos_ssl_none": "Aucun",
-  "iplb_infos_ssl_ovh": "Fourni par OVH",
+  "iplb_infos_ssl_ovh": "Fourni par OVHcloud",
   "iplb_infos_ssl_customer": "Fourni par le client",
   "iplb_stickiness_set_question": "Quel type de gestion des sessions désirez-vous ?",
   "iplb_stickiness_set_success": "La valeur de la gestion des sessions sera mise à jour d'ici quelques instants.",
@@ -624,14 +624,14 @@
   "iplb_ssl_chain": "Chaîne",
   "iplb_ssl_import_title": "Importer un certificat SSL",
   "iplb_ssl_import_question": "Vous êtes sur le point d'importer votre propre certificat SSL.",
-  "iplb_ssl_import_question2": "Note : Vous pourrez restaurer le certificat OVH par la suite, si vous le désirez.",
+  "iplb_ssl_import_question2": "Note : Vous pourrez restaurer le certificat OVHcloud par la suite, si vous le désirez.",
   "iplb_ssl_import_success": "Votre certificat SSL sera importé d'ici quelques minutes.",
   "iplb_ssl_import_failure": "Une erreur est survenue lors de l'importation de votre certificat SSL.",
-  "iplb_ssl_restore_title": "Restaurer le certificat SSL OVH",
-  "iplb_ssl_restore_question": "Etes-vous certain(e) de vouloir restaurer le certificat SSL OVH ?",
+  "iplb_ssl_restore_title": "Restaurer le certificat SSL OVHcloud",
+  "iplb_ssl_restore_question": "Etes-vous certain(e) de vouloir restaurer le certificat SSL OVHcloud ?",
   "iplb_ssl_restore_question2": "Un DCV email sera envoyé à \"postmaster@votre_domaine.com\".",
-  "iplb_ssl_restore_success": "Votre certificat SSL OVH sera restauré une fois validé.",
-  "iplb_ssl_restore_failure": "Une erreur est survenue lors de la restauration de votre certificat SSL OVH.",
+  "iplb_ssl_restore_success": "Votre certificat SSL OVHcloud sera restauré une fois validé.",
+  "iplb_ssl_restore_failure": "Une erreur est survenue lors de la restauration de votre certificat SSL OVHcloud.",
   "iplb_zone_internalnatip": "IP NAT interne",
   "iplb_zone_probeip": "IP du protocole de test",
   "iplb_zone_order_btn": "Commander",
@@ -651,7 +651,7 @@
   "iplb_backend_probe_NONE": "Aucun",
   "iplb_backend_probe_help_NONE": "Aucun : Aucune vérification",
   "iplb_backend_probe_help_HTTPICMP": "HTTP/ICMP : Tests sur le port mentionné",
-  "iplb_backend_probe_help_OCO": "OCO : (Ovh Check Out) Tests sur le port 79",
+  "iplb_backend_probe_help_OCO": "OCO : (OVHcloud Check Out) Tests sur le port 79",
   "iplb_backend_add_title": "Ajouter un backend",
   "iplb_backend_add_question": "Complétez les informations, puis cliquez sur \"Valider\" :",
   "iplb_backend_add_ipbackend": "IP du backend",
