--- a/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_fr_FR.json
@@ -1,12 +1,12 @@
 {
-  "ip_components_alerts_load_text_with_service": "Vérifiez si vous avez des alertes sur vos IP pour ce service.",
+  "ip_components_alerts_load_text_with_service": "Vérifiez si vous avez des alertes sur vos IP pour ce type de service.",
   "ip_components_alerts_load_text": "Vérifiez si vous avez des alertes sur vos IP.",
   "ip_components_alerts_load_link": "Voir toutes mes alertes",
-  "ip_components_alerts_one_alert_with_service": "1 alerte pour ce service",
-  "ip_components_alerts_many_alerts_with_service": "{} alertes pour ce service",
+  "ip_components_alerts_one_alert_with_service": "1 alerte pour ce type de service",
+  "ip_components_alerts_many_alerts_with_service": "{} alertes pour ce type de service",
   "ip_components_alerts_one_alert": "1 alerte",
   "ip_components_alerts_many_alerts": "{} alertes",
-  "ip_components_alerts_no_alerts_with_service": "Aucune alerte pour ce service",
+  "ip_components_alerts_no_alerts_with_service": "Aucune alerte pour ce type de service",
   "ip_components_alerts_no_alerts": "Aucune alerte",
   "ip_components_alerts_one_spam_alert": "1 IP bloquée (Antispam)",
   "ip_components_alerts_many_spam_alerts": "{} IP bloquées (Antispam)",
