fix(telecom.sms): add smpp guides
ref: MANAGER-10726

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sms/src/sms/guides/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sms/src/sms/guides/translations/Messages_fr_FR.json
@@ -1,5 +1,8 @@
 {
   "sms_guides_breadcrumb": "Guides",
+  "sms_guides_section_smpp": "SMPP",
+  "sms_guides_smpp_control_panel": "Gestion d'un compte SMS SMPP",
+  "sms_guides_smpp_specifications": "Spécifications techniques du SMPP",
   "sms_guides_section_compose": "Composer un SMS",
   "sms_guides_compose_faq": "Questions fréquentes.",
   "sms_guides_compose_filters": "Liste des exceptions et filtres selon les destinations.",
