--- a/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_de_DE.json
@@ -7,5 +7,6 @@
   "pci_additional_ips_floatingips_edit_select_ip": "Wählen Sie ein Netzwerk / eine IP aus",
   "pci_additional_ips_floatingips_edit_success": "Die Einstellungen der Instanz, der die IP {{ ip }} zugeordnet ist, wurden geändert.",
   "pci_additional_ips_floatingips_edit_error": "Bei der Änderung der verbundenen Instanz ist ein Fehler aufgetreten: {{ error }}",
-  "pci_additional_ips_floatingips_edit_gateway_error": "In dem ausgewählten privaten Netzwerk wurde kein Gateway gefunden. Das ist jedoch erforderlich, um diese Floating IP zuzuweisen. Bitte erstellen Sie daher zuerst ein Gateway. Alternativ dazu können Sie auch eine andere Instanz oder ein anderes privates Netzwerk auswählen."
+  "pci_additional_ips_floatingips_edit_gateway_error": "In dem ausgewählten privaten Netzwerk wurde kein Gateway gefunden. Das ist jedoch erforderlich, um diese Floating IP zuzuweisen. Bitte erstellen Sie daher zuerst ein Gateway. Alternativ dazu können Sie auch eine andere Instanz oder ein anderes privates Netzwerk auswählen.",
+  "pci_additional_ips_floatingips_edit_gateway_no_instance_error": "Es ist keine verfügbare Instanz zugewiesen"
 }
