--- a/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/translations/Messages_es_ES.json
@@ -7,5 +7,6 @@
   "pci_additional_ips_floatingips_edit_select_ip": "Seleccione una red/IP",
   "pci_additional_ips_floatingips_edit_success": "Se ha modificado la instancia asociada a la dirección IP {{ ip }}.",
   "pci_additional_ips_floatingips_edit_error": "Se ha producido un error al modificar la instancia asociada: {{ error }}",
-  "pci_additional_ips_floatingips_edit_gateway_error": "No hemos encontrado ninguna puerta de enlace en la red privada seleccionada necesaria para asociar esta Floating IP. Deberá crear una en primer lugar o seleccionar otra instancia o red privada."
+  "pci_additional_ips_floatingips_edit_gateway_error": "No hemos encontrado ninguna puerta de enlace en la red privada seleccionada necesaria para asociar esta Floating IP. Deberá crear una en primer lugar o seleccionar otra instancia o red privada.",
+  "pci_additional_ips_floatingips_edit_gateway_no_instance_error": "No hay ninguna instancia asociada disponible"
 }
