--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_es_ES.json
@@ -1376,7 +1376,5 @@
   "hosting_dashboard_tabs_dropdown": "Más",
   "hosting_dashboard_service_datacenter_gra": "Gravelines",
   "hosting_dashboard_service_datacenter_gra3": "Gravelines 3",
-  "hosting_dashboard_service_datacenter_bhs": "Beauharnois",
-  "hosting_configuration_tab_modules_create_step1_module_default_path_part_1": "El directorio de instalación por defecto es {{t0}}.",
-  "hosting_configuration_tab_modules_create_step1_module_default_path_part_2": "Por favor, seleccione el modo avanzado para instalar el módulo en otro directorio."
+  "hosting_dashboard_service_datacenter_bhs": "Beauharnois"
 }
