--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pl_PL.json
@@ -1376,7 +1376,5 @@
   "hosting_dashboard_tabs_dropdown": "Więcej",
   "hosting_dashboard_service_datacenter_gra": "Gravelines",
   "hosting_dashboard_service_datacenter_gra3": "Gravelines 3",
-  "hosting_dashboard_service_datacenter_bhs": "Beauharnois",
-  "hosting_configuration_tab_modules_create_step1_module_default_path_part_1": "Domyślny katalog instalacyjny to {{t0}}.",
-  "hosting_configuration_tab_modules_create_step1_module_default_path_part_2": "Wybierz tryb zaawansowany, aby zainstalować moduł w innym katalogu."
+  "hosting_dashboard_service_datacenter_bhs": "Beauharnois"
 }
