Revert "fix(dedicated.monitoring): update the translation for the monitoring (#8684)"
This reverts commit beb7e8d7ac749323cb4283c7620dae5c71c9dac4.

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pt_PT.json
@@ -1116,13 +1116,13 @@
   "server_configuration_monitoring_status_tooltip_proactive": "Intervenção em datacenter solicitada",
   "server_configuration_monitoring_status_tooltip_no-proactive": " Intervenção em datacenter não solicitada",
   "server_configuration_monitoring_update_modal_title": "Monitorização",
-  "server_configuration_monitoring_update_modal_intro": "A monitorização do servidor dedicado corresponde a um ping ICMP realizado no seu servidor para testar o estado da conectividade.",
+  "server_configuration_monitoring_update_modal_intro": "A monitorização SD corresponde a um ping ICMP realizado no seu servidor para testar o estado da sua conectividade.",
   "server_configuration_monitoring_update_modal_status_disabled": "Desativado",
   "server_configuration_monitoring_update_modal_status_proactive": "Ativado com intervenção proativa",
   "server_configuration_monitoring_update_modal_status_no-proactive": "Ativado sem intervenção proativa",
   "server_configuration_monitoring_update_modal_description_status_disabled": "O seu servidor não é monitorizado e não receberá nenhum alerta da OVHcloud em caso de incidente.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Com a monitorização do seu servidor, receberá os alertas por e-mail, no endereço associado ao identificador do seu contacto técnico. Autoriza que a OVHcloud intervenha diretamente na sua máquina em caso de alertas. Um ticket de suporte é automaticamente criado para que possa fazer o acompanhamento desta intervenção.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Com a monitorização do seu servidor, receberá os alertas por e-mail, no endereço associado ao identificador do seu contacto técnico. A OVHcloud não intervirá na sua máquina sem um pedido direto da sua parte.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "O seu servidor é monitorizado e receberá os alertas por e-mail no endereço associado ao seu NIC Tech. Autoriza que a OVHcloud intervenha diretamente na sua máquina em caso de alertas. Um ticket de suporte é automaticamente criado para que possa fazer o acompanhamento desta intervenção.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "O seu servidor é monitorizado e receberá os alertas por e-mail no endereço associado ao seu NIC Tech. A OVHcloud não intervirá na sua máquina sem um pedido direto da sua parte.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "As intervenções no servidor {{serverName}} estão ativas.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "As intervenções estão desativadas no servidor {{serverName}}.",
   "server_configuration_monitoring_update_modal_update_request_failed": "Ocorreu um erro aquando da alteração da opção de monitorização."
