--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
@@ -1116,7 +1116,7 @@
   "server_configuration_monitoring_status_tooltip_proactive": "Intervención en datacenter solicitada",
   "server_configuration_monitoring_status_tooltip_no-proactive": " Intervención en datacenter no solicitada",
   "server_configuration_monitoring_update_modal_title": "Monitoring",
-  "server_configuration_monitoring_update_modal_intro": "El monitoring de su servidor dedicado corresponde a un ping ICMP realizado en su servidor para comprobar el estado de su conectividad.",
+  "server_configuration_monitoring_update_modal_intro": "El monitoring SD corresponde a un ping ICMP realizado en su servidor para comprobar el estado de su conectividad.",
   "server_configuration_monitoring_update_modal_status_disabled": "Desactivado",
   "server_configuration_monitoring_update_modal_status_proactive": "Activado con intervención proactiva",
   "server_configuration_monitoring_update_modal_status_no-proactive": "Activado sin intervención proactiva",
